--- a/web/index.html
+++ b/web/index.html
@@ -12,11 +12,11 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="$FLUTTER_BASE_HREF">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A Very Good new Flutter project.">
+  <meta name="description" content="Portfolio">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -106,6 +106,8 @@
       loadMainDartJs();
     }
   </script>
+
+
 
 
 </body></html>
